Start exploring the data

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -23,9 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4min 46s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# assign dtypes to reduce memory use\n",
@@ -46,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 30.9 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "test_df = pd.read_csv('input/test.csv', header=0, sep=',', \n",
@@ -59,19 +87,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded...\n"
+     ]
+    }
+   ],
    "source": [
     "print('Loaded...')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: 184903890 rows\n",
+      "Test:  18790469 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data set sizes in rows\n",
+    "print(\"Train: \"+str(len(train_df))+\" rows\")\n",
+    "print(\"Test:  \"+str(len(test_df))+\" rows\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ip</th>\n",
+       "      <th>app</th>\n",
+       "      <th>device</th>\n",
+       "      <th>os</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>click_time</th>\n",
+       "      <th>is_attributed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>83230</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 14:32:21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17357</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 14:33:34</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35810</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 14:34:12</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45745</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>478</td>\n",
+       "      <td>2017-11-06 14:34:52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>161007</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>379</td>\n",
+       "      <td>2017-11-06 14:35:08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ip  app  device  os  channel          click_time  is_attributed\n",
+       "0   83230    3       1  13      379 2017-11-06 14:32:21              0\n",
+       "1   17357    3       1  19      379 2017-11-06 14:33:34              0\n",
+       "2   35810    3       1  13      379 2017-11-06 14:34:12              0\n",
+       "3   45745   14       1  13      478 2017-11-06 14:34:52              0\n",
+       "4  161007    3       1  13      379 2017-11-06 14:35:08              0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check out rows\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sanity checks\n",
+    "Make sure there are no NaN values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ip               0\n",
+       "app              0\n",
+       "device           0\n",
+       "os               0\n",
+       "channel          0\n",
+       "click_time       0\n",
+       "is_attributed    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "click_id      0\n",
+       "ip            0\n",
+       "app           0\n",
+       "device        0\n",
+       "os            0\n",
+       "channel       0\n",
+       "click_time    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are the click times sorted?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.click_time.is_monotonic, test_df.click_time.is_monotonic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "click_time columns are sorted in the data frames"
+   ]
   }
  ],
  "metadata": {
