Feature engineering done

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -19,6 +19,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction\n",
+    "\n",
+    "This is my solution for the following Kaggle competition:\n",
+    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/data\n",
+    "\n",
+    "The goal is to classify ad click data on whether the click was followed by an application download or not. I decided to use LightGBM because the data has mostly categorical features and is large, making it suitable for LGBM."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load data"
    ]
   },
@@ -737,6 +749,502 @@
    "source": [
     "test_df.isna().sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downsampling of train data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have decided to apply the strategy of negative down-sampling on the train data as the winning team did in the competition:\n",
+    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/discussion/56475#latest-436248\n",
+    "\n",
+    "This means that all the few data points classified as attributed are kept for model training, while an equal amount of negative points (i.e. not attributed) are randomly sampled from the rest of the train data. In this way the train data is shrinked to a manageable amount. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count number of attributed clicks\n",
+    "attr_mask = train_df.is_attributed == 1\n",
+    "nattr = attr_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keep the original train data set as it will be required for feature engineering\n",
+    "original_train = train_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 3min 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# downsample the non-attributed data to balance labels\n",
+    "sample_train_df = original_train[original_train.is_attributed != 1].sample(n=nattr, random_state=1) #[:nattr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52365"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df = sample_train_df.append(original_train[attr_mask])\n",
+    "train_df = train_df.sort_index()\n",
+    "del sample_train_df\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of downsampled train data set: 913692 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Size of downsampled train data set: \"+str(len(train_df))+\" rows\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### New features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The feature selection was made based on information of what worked for other succesful competitors:\n",
+    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/discussion/56406#latest-329920\n",
+    "\n",
+    "The most important feature seems to be the finite difference between adjacent click times (1 or 2 steps, backward or forward) in groups made on combinations of the cateogorical features. I implemented my own way of calculating the features below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# features derived from groups of train data grouped by different combincations of columns\n",
+    "def fe_group_by(df, cols):\n",
+    "    \n",
+    "    feat = []\n",
+    "\n",
+    "    # create group by\n",
+    "    gb_times = df[cols+['click_time']].groupby(cols)\n",
+    "    # calculate 1 step diff\n",
+    "    time_diff_1 = (gb_times.click_time.shift(-1) - df.click_time).dt.seconds\n",
+    "    gc.collect();\n",
+    "    # add features\n",
+    "    # 1 step forward difference\n",
+    "    feat.append('time_1step_diff_' + '_'.join(cols))\n",
+    "    df[feat[-1]] = time_diff_1\n",
+    "    # 1 step backward difference\n",
+    "    feat.append('time_-1step_diff_' + '_'.join(cols))\n",
+    "    df[feat[-1]] = time_diff_1.shift(1)\n",
+    "    # 2 step forward difference\n",
+    "    feat.append('time_2step_diff_' + '_'.join(cols))\n",
+    "    df[feat[-1]] = time_diff_1 + time_diff_1.shift(-1)\n",
+    "    # 2 step backward difference\n",
+    "    feat.append('time_-2step_diff_' + '_'.join(cols))\n",
+    "    df[feat[-1]] = df['time_2step_diff_' + '_'.join(cols)].shift(2)\n",
+    "    # click count\n",
+    "    feat.append('click_count_' + '_'.join(cols))\n",
+    "    df = df.merge(gb_times.click_time.count().rename(feat[-1]), how='left', on=cols) \n",
+    "\n",
+    "    gc.collect();\n",
+    "    \n",
+    "    return df, feat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the randomly sampled data belongs to groups in the original data set, we need to work with the original data set to calculate the group level features of the selected rows. Therefore, a merge based on the columns on which the ggrouping is made is necessary.\n",
+    "\n",
+    "The size of the data makes it impossible to calculate the group features at once on my laptop. Therefore I decided to split the train data groups into chunks, then merge it with the original data and calulate group features on the chunks, in a serial way. This is feasible with the current computing resources.\n",
+    "\n",
+    "Once the features are calculated, another merge is made between the rows corresponding to the chunk in the downsampled set and the same rows in the chunk for which the features were calculated.\n",
+    "\n",
+    "From the click time, only the hour was kept as a feature for model training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# features by which to split into groups\n",
+    "group_by_cols = [\n",
+    "    ['ip', 'os', 'device', 'app'],\n",
+    "    ['ip', 'os', 'device', 'app', 'channel']\n",
+    "]\n",
+    "\n",
+    "def fe(df, original, nchunks):\n",
+    "    \n",
+    "    predictors=['ip', 'app', 'device', 'os', 'channel']\n",
+    "    \n",
+    "    for cols in group_by_cols:\n",
+    "        \n",
+    "        groups = df[cols].drop_duplicates() # unique combinations of the categories in cols\n",
+    "        chunks = np.array_split(groups, nchunks) # split into chunks used for group_by features\n",
+    "        feat_chunks = []\n",
+    "        \n",
+    "        print(cols)\n",
+    "        \n",
+    "        for i, chunk in enumerate(chunks):\n",
+    "            print('Chunk '+str(i))\n",
+    "            # join chunk with the rest of the data\n",
+    "            df_for_groupby = chunk.merge(original, how='left', on=cols)\n",
+    "            print(\"Merge groups done...\")\n",
+    "            gc.collect()\n",
+    "            # calculate features of groups\n",
+    "            df_for_groupby, ft = fe_group_by(df_for_groupby, cols)\n",
+    "            print(\"Calculating features on groups done...\")\n",
+    "            gc.collect()\n",
+    "            # collect chunks of features\n",
+    "            feat_chunks.append(chunk.merge(df, how='left', on=cols)\n",
+    "                               .merge(df_for_groupby[ft+['index']], how='left',\n",
+    "                                      on='index'))\n",
+    "            print(\"Merge with train data done...\\n\")\n",
+    "            del df_for_groupby\n",
+    "            gc.collect()\n",
+    "            \n",
+    "        # update df\n",
+    "        df = pd.concat(feat_chunks)\n",
+    "        predictors += ft\n",
+    "        \n",
+    "    # hour as feature\n",
+    "    df['hour'] = pd.to_datetime(df.click_time).dt.hour.astype('int8')\n",
+    "    predictors.append('hour')\n",
+    "\n",
+    "    gc.collect();\n",
+    "    \n",
+    "    return df, predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ip', 'os', 'device', 'app']\n",
+      "Chunk 0\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 1\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 2\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 3\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 4\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 5\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 6\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 7\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 8\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 9\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 10\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 11\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "['ip', 'os', 'device', 'app', 'channel']\n",
+      "Chunk 0\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 1\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 2\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 3\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 4\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 5\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 6\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 7\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 8\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 9\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 10\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Chunk 11\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Wall time: 36min 17s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "train_df, predictors = fe(train_df, original_train, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictors used for training:  \n",
+      "ip \n",
+      "app \n",
+      "device \n",
+      "os \n",
+      "channel \n",
+      "time_1step_diff_ip_os_device_app \n",
+      "time_-1step_diff_ip_os_device_app \n",
+      "time_2step_diff_ip_os_device_app \n",
+      "time_-2step_diff_ip_os_device_app \n",
+      "click_count_ip_os_device_app \n",
+      "time_1step_diff_ip_os_device_app_channel \n",
+      "time_-1step_diff_ip_os_device_app_channel \n",
+      "time_2step_diff_ip_os_device_app_channel \n",
+      "time_-2step_diff_ip_os_device_app_channel \n",
+      "click_count_ip_os_device_app_channel \n",
+      "hour\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Predictors used for training: \", *['\\n'+p for p in predictors])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('train_df.pickle','wb') as pckl_file:\n",
+    "    pickle.dump(train_df, pckl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ip', 'os', 'device', 'app']\n",
+      "Chunk 0\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "['ip', 'os', 'device', 'app', 'channel']\n",
+      "Chunk 0\n",
+      "Merge groups done...\n",
+      "Calculating features on groups done...\n",
+      "Merge with train data done...\n",
+      "\n",
+      "Wall time: 2min 22s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "test_df.reset_index(inplace=True)\n",
+    "test_df, feat = fe(test_df, test_df, 1)\n",
+    "gc.collect();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_df.pickle','wb') as pckl_file:\n",
+    "    pickle.dump(test_df, pckl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
