Add link to data source

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -22,9 +22,12 @@
     "## Introduction\n",
     "\n",
     "This is my solution for the following Kaggle competition:\n",
-    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/data\n",
+    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/overview\n",
     "\n",
-    "The goal is to classify ad click data on whether the click was followed by an application download or not. I decided to use LightGBM because the data has mostly categorical features and is large, making it suitable for LGBM."
+    "The goal is to classify ad click data on whether the click was followed by an application download or not. I decided to use LightGBM because the data has mostly categorical features and is large, making it suitable for LGBM.\n",
+    "\n",
+    "To be able to run this Notebook, please download the train.csv and test.csv from:\n",
+    "https://www.kaggle.com/c/talkingdata-adtracking-fraud-detection/data"
    ]
   },
   {
