Expand Jupyter cell outputs

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -983,7 +983,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1346,9 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1659,13 +1659,7 @@
       "[292]\tvalid's auc: 0.984176\n",
       "[293]\tvalid's auc: 0.984176\n",
       "[294]\tvalid's auc: 0.984171\n",
-      "[295]\tvalid's auc: 0.984173\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[295]\tvalid's auc: 0.984173\n",
       "[296]\tvalid's auc: 0.984172\n",
       "[297]\tvalid's auc: 0.984174\n",
       "[298]\tvalid's auc: 0.984174\n",
@@ -1908,9 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
